# CarMaker-XIF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Data/Config/: CMRosIFParameters  Default.lcfg  GUI  Plugins  Preferences.sce  Project
Data/Road/: FS_autonomous_Acceleration.rd5  FS_autonomous_SkidPad.rd5  FS_autonomous_TrackDrive.rd5
Data/Script/: generate_cones.tcl
Data/Sensor/: LidarRSI_FS_autonomous
Data/TestRun/: .tmp__seb.0  FS_autonomous_Acceleration  FS_autonomous_SkidPad  FS_autonomous_TrackDrive
Data/Traffic/Template/: TrafficCone_Large_Orange  TrafficCone_Small_Blue  TrafficCone_Small_Orange  TrafficCone_Small_Yellow
Data/Vehicle/: .tmp__seb.0
Data/Vehicle/Examples_FS/: FS_Autonomous
Movie/: Camera.cfg.autobackup
Movie/.road_cache/: C__Users_Seb_CarMaker-XIF_FS_autonomous_TrackDrive.seb-legionw11_0.roadgeo  FS_autonomous_SkidPad.roadgeo  _home_seb_TBReSim-CarMaker_FS_autonomous_TrackDrive.seb-Legion-Pro-5_2.roadgeo
Movie/TrafficCones/: TrafficCone_Yellow-Black.mobj  TrafficCone_Yellow-Black.objinfo  TrafficCones.mtl
MovieNX/data/TrafficCones/: TrafficCone_Large_Orange.mtl  TrafficCone_Large_Orange.node  TrafficCone_Small_Blue.mtl  TrafficCone_Small_Blue.node  TrafficCone_Small_Orange.mtl  TrafficCone_Small_Orange.node  (+2 more)
src/: CMakeLists.txt  cmimg.c  cmimg.h  main.c
src/carmaker/: CM_Main.c  CM_Main.h  User.c  app_tmp.c  beamtable.c
src/cmake/: FindCarMaker.cmake  FindRTMaker.cmake  Generate_Version_h.cmake  IPG_Macros.cmake  IPG_RTMacros.cmake  README.md
src/cmake/toolchains/host-linux/tgt-linux/compiler-gcc/: gcc-5.4-x86_64.toolchain.cmake
src/cmake/toolchains/host-linux/tgt-win/compiler-mingw/: mingw-11.3-x86_64.toolchain.cmake  mingw-7.5.0-x86_64.toolchain.cmake
src/cmake/toolchains/host-linux/tgt-xeno/compiler-xeno-gcc/: xeno-x86_64.toolchain.cmake
src/cmake/toolchains/host-win/tgt-win/compiler-msys/: msys-2020-x86_64.toolchain.cmake  msys-2023-x86_64.toolchain.cmake
src/cmake/toolchains/host-win/tgt-xeno/compiler-msys/: msys-2020-xeno-x86_64.toolchain.cmake  msys-2023-xeno-x86_64.toolchain.cmake
(+66 files in other folders)
